@@ -38,6 +38,7 @@ import java.nio.file.Paths;
 import java.security.Principal;
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Controller
@@ -72,7 +73,7 @@ public class UserController {
         Pageable pageable = PageRequest.of(pageNumber - 1, 5);
         Page<User> pageUser = userService.findAll(pageable);
         List<User> users = pageUser.getContent();
-        users = users.stream().filter(user -> !user.getRole().getRoleName().equalsIgnoreCase("Admin")).toList();
+        users = users.stream().filter(u -> !u.getRole().getRoleName().equals("ADMIN")).collect(Collectors.toList());
         int totalPages = pageUser.getTotalPages();
         model.addAttribute("users", users);
         model.addAttribute("currentPage", pageNumber);
@@ -84,6 +85,7 @@ public class UserController {
     @RequestMapping("/admin/add_user")
     public String showCreateForm(Model model) {
         List<Role> roles = roleService.findAll();
+        roles = roles.stream().filter(r -> !r.getRoleName().equals("ADMIN")).collect(Collectors.toList());
         model.addAttribute("roles", roles);
         model.addAttribute("userDTO", new UserDTO());
         return "BackEnd/Admin/Add_User";
@@ -102,12 +104,9 @@ public class UserController {
         UserDTO userDTO = config(user);
         userDTO.setImageName(user.getImage());
         List<Role> roles = roleService.findAll();
-//        if(userDTO.getDob() != null){
-//            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-//            String dobFormatted = userDTO.getDob().format(formatter);
-//            model.addAttribute("dobFormatted", dobFormatted);
-//        }
+        roles = roles.stream().filter(r -> !r.getRoleName().equals("ADMIN")).collect(Collectors.toList());
         model.addAttribute("roles", roles);
+        model.addAttribute("role", user.getRole().getRoleName());
         model.addAttribute("userDTO", userDTO);
         model.addAttribute("id", id);
         return "BackEnd/Admin/Edit_User";
@@ -116,7 +115,7 @@ public class UserController {
     @PostMapping("/admin/saveUser")
     public ResponseEntity<?> saveUser(@ModelAttribute("userDTO") @Valid UserDTO userDTO,
                                       BindingResult bindingResult,
-                                      @RequestPart("image") MultipartFile image
+                                      @RequestPart(value = "image", required = false) MultipartFile image
     ){
         if (bindingResult.hasErrors()) {
             Map<String, String> errors = new HashMap<>();
@@ -125,8 +124,9 @@ public class UserController {
             });
             return ResponseEntity.badRequest().body(errors);
         }
-        if(userService.existsByPhone(userDTO.getPhone())){
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of("phone", "Phone number already exists"));
+
+        if(userService.existsByEmail(userDTO.getEmail())){
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of("email", "Email already exists"));
         }
 //        MultipartFile image = userDTO.getImage();
         String fileName = null;
